some code for ecs - not finished