@@ -4,22 +4,41 @@ import java.io.UnsupportedEncodingException;
 import java.math.BigInteger;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.NoSuchElementException;
 
+import org.apache.log4j.Logger;
+
 public class MetadataHandler {
-	private LinkedList<NodeData> metadata = new LinkedList<>();
+	private List<NodeData> metadata;
 	private final static String fieldSeparator = ";";
 	private final static String lineSeparator = "/";
+	private final static String hashingAlgorithm = "MD5";
 	private String minHashKey;
 	private String maxHashKey;
-	private final String clientIp;
-	private final int clientPort;
+	private final String myIp;
+	private final int myPort;
 
-
+	/**
+	 * used by server
+	 * @param myIp
+	 * @param myPort
+	 */
 	public MetadataHandler(String clientIp, int clientPort) {
-		this.clientIp = clientIp;
-		this.clientPort = clientPort;
+		this.myIp = clientIp;
+		this.myPort = clientPort;
+	}
+	
+	/**
+	 * used by ECS
+	 * @param metadataContent
+	 */
+	public MetadataHandler(List<NodeData> metadata) {
+		this.metadata = metadata;
+		myPort = -1;
+		myIp = null;
 	}
 
 	/**
@@ -36,7 +55,7 @@ public class MetadataHandler {
 			data = n.split(fieldSeparator);
 			String ipAddress = data[1];
 			int port = Integer.parseInt(data[2]);
-			if (this.clientIp.equals(ipAddress) && this.clientPort == port) {
+			if (this.myIp.equals(ipAddress) && this.myPort == port) {
 				minHashKey = data[3];
 				maxHashKey = data[4];
 			}
@@ -73,7 +92,14 @@ public class MetadataHandler {
 
 
 	public boolean isResponsibleFor(String key) throws NoSuchAlgorithmException, UnsupportedEncodingException {
-		return isInRange(key, minHashKey, maxHashKey);
+		boolean b;
+		try {
+			b =isInRange(key, minHashKey, maxHashKey);
+		} catch (NoSuchAlgorithmException e) {
+			Logger.getLogger(getClass().getSimpleName()).fatal("Hashing algorithm " + hashingAlgorithm + " could not be found!");
+			throw(e);
+		}
+		return b;
 	}
 
 	public String toString() {
@@ -89,7 +115,7 @@ public class MetadataHandler {
 	}
 
 	private boolean isInRange(String key, String minHash, String maxHash) throws NoSuchAlgorithmException, UnsupportedEncodingException {
-		String hashedKey = new BigInteger(1,MessageDigest.getInstance("MD5").digest(key.getBytes("UTF-8"))).toString(16);
+		String hashedKey = new BigInteger(1,MessageDigest.getInstance(hashingAlgorithm).digest(key.getBytes("UTF-8"))).toString(16);
 		try {
 			boolean b = hashedKey.compareTo(minHash) >= 0 && hashedKey.compareTo(maxHash) <= 0;
 			System.out.println(hashedKey);
@@ -112,7 +138,7 @@ public class MetadataHandler {
 	}
 
 	public NodeData getRandom() throws NoSuchElementException {
-		return metadata.getFirst();
+		return metadata.get(0);
 	}
 
 }
